--- a/nodb/package.json
+++ b/nodb/package.json
@@ -6,7 +6,8 @@
     "mixin-deep": "^2.0.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "url-parse": "^1.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
