--- a/nodb/package.json
+++ b/nodb/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "handlebars": "^4.4.5",
     "js-yaml": "^3.13.1",
+    "mem": "^5.1.1",
     "merge": "^1.2.1",
     "mixin-deep": "^2.0.1",
     "react": "^16.4.0",
