--- a/nodb/package.json
+++ b/nodb/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint": "^6.6.0",
     "handlebars": "^4.4.5",
     "js-yaml": "^3.13.1",
     "mem": "^5.1.1",
