--- a/nodb/package.json
+++ b/nodb/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
     "set-value": "^3.0.1",
-    "url-parse": "^1.4.7"
+    "url-parse": "^1.4.7",
+    "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
